statum-macros/tests/ui/invalid_transition_not_method.stderr
error: Error: transition method `to_b` must take `self` or `mut self` as its receiver.
  --> tests/ui/invalid_transition_not_method.rs:19:5
   |
19 |     fn to_b(_value: u64) -> Machine<B> {
   |     ^^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_transition_not_method.rs:22:2
   |
22 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_transition_not_method.rs`
